php-phpunit-PHPUnit-Selenium: 3.0.3

--- a/php/phpunit/php-phpunit-PHPUnit-Selenium/composer.json
+++ b/php/phpunit/php-phpunit-PHPUnit-Selenium/composer.json
@@ -22,6 +22,10 @@
             "role": "developer"
         },
         {
+            "name": "Paul Briton",
+            "role": "developer"
+        },
+        {
             "name": "Sebastian Bergmann",
             "email": "sb@sebastian-bergmann.de",
             "role": "original developer"
