--- a/phan/composer.json
+++ b/phan/composer.json
@@ -12,16 +12,18 @@
             "name": "Andrew S. Morrison"
         }
     ],
+    "config": {
+        "sort-packages": true
+    },
     "require": {
-        "php": ">=7.0",
+        "php": "~7.0.0",
         "ext-ast": "*",
-        "ext-sqlite3": "0.7-dev",
         "symfony/console": "~2.3|~3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.4.8",
-        "phpdocumentor/phpdocumentor": "dev-master",
-        "squizlabs/php_codesniffer": "^2.5"
+        "phpdocumentor/phpdocumentor": "^2.9.0",
+        "phpunit/phpunit": "^5.7.2",
+        "squizlabs/php_codesniffer": "^2.7.1"
     },
     "autoload": {
         "psr-4": {"Phan\\": "src/Phan"}
