--- a/php/tecnick/php-tecnickcom-tc-lib-pdf-encrypt/composer.json
+++ b/php/tecnick/php-tecnickcom-tc-lib-pdf-encrypt/composer.json
@@ -13,7 +13,13 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "ext-date": "*",
+        "ext-hash": "*",
+        "ext-mcrypt": "*",
+        "ext-openssl": "*",
+        "ext-pcre": "*",
+        "ext-posix": "*"
     },
     "require-dev": {
         "apigen/apigen" : "^4.1.2",
