--- a/php/tecnick/php-tecnickcom-tc-lib-file/composer.json
+++ b/php/tecnick/php-tecnickcom-tc-lib-file/composer.json
@@ -13,7 +13,9 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "ext-curl": "*",
+        "ext-pcre": "*"
     },
     "require-dev": {
         "apigen/apigen" : "^4.1.2",
