php-tecnickcom-tc-lib-pdf-filter: 1.3.4

--- a/php/tecnick/php-tecnickcom-tc-lib-pdf-filter/composer.json
+++ b/php/tecnick/php-tecnickcom-tc-lib-pdf-filter/composer.json
@@ -13,7 +13,9 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "ext-zlib": "*",
+        "ext-pcre": "*"
     },
     "require-dev": {
         "apigen/apigen" : "^4.1.2",
