--- a/php/tecnick/php-tecnickcom-tc-lib-pdf-graph/composer.json
+++ b/php/tecnick/php-tecnickcom-tc-lib-pdf-graph/composer.json
@@ -14,8 +14,9 @@
     ],
     "require": {
         "php": ">=5.4",
-        "tecnickcom/tc-lib-color": "^1.12.1",
-        "tecnickcom/tc-lib-pdf-encrypt": "^1.4.3"
+        "ext-zlib": "*",
+        "tecnickcom/tc-lib-color": "^1.12.4",
+        "tecnickcom/tc-lib-pdf-encrypt": "^1.4.4"
     },
     "require-dev": {
         "apigen/apigen" : "^4.1.2",
