--- a/php/tecnick/php-tecnickcom-tc-lib-pdf-parser/composer.json
+++ b/php/tecnick/php-tecnickcom-tc-lib-pdf-parser/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
         "php": ">=5.4",
-        "tecnickcom/tc-lib-pdf-filter": "^1.3.3"
+        "ext-pcre": "*",
+        "tecnickcom/tc-lib-pdf-filter": "^1.3.4"
     },
     "require-dev": {
         "apigen/apigen" : "^4.1.2",
