php-tecnickcom-tc-lib-unicode: 1.3.4

--- a/php/tecnick/php-tecnickcom-tc-lib-unicode/composer.json
+++ b/php/tecnick/php-tecnickcom-tc-lib-unicode/composer.json
@@ -14,6 +14,8 @@
     ],
     "require": {
         "php": ">=5.4",
+        "ext-mbstring": "*",
+        "ext-pcre": "*",
         "tecnickcom/tc-lib-unicode-data": "^1.6.3"
     },
     "require-dev": {
