--- a/php/phpunit/php-phpunit-phpcpd/composer.json
+++ b/php/phpunit/php-phpunit-phpcpd/composer.json
@@ -13,13 +13,17 @@
     "support": {
         "issues": "https://github.com/sebastianbergmann/phpcpd/issues"
     },
+    "config": {
+        "platform": {
+            "php": "5.6.0"
+        }
+    },
     "require": {
-        "php": ">=5.3.3",
-        "sebastian/finder-facade": "~1.1",
-        "sebastian/version": "~1.0|~2.0",
-        "symfony/console": "~2.7|^3.0",
-        "phpunit/php-timer": ">=1.0.6",
-        "theseer/fdomdocument": "~1.4"
+        "php": "^5.6|^7.0",
+        "sebastian/finder-facade": "^1.1",
+        "sebastian/version": "^2.0",
+        "symfony/console": "^3.0",
+        "phpunit/php-timer": "^1.0.6"
     },
     "autoload": {
         "classmap": [
@@ -31,7 +35,7 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0-dev"
+            "dev-master": "3.0-dev"
         }
     }
 }
