--- a/php/php-cs-fixer/composer.json
+++ b/php/php-cs-fixer/composer.json
@@ -16,14 +16,14 @@
     "require": {
         "php": "^5.3.6 || >=7.0 <7.2",
         "ext-tokenizer": "*",
+        "sebastian/diff": "^1.1",
         "symfony/console": "^2.3 || ^3.0",
         "symfony/event-dispatcher": "^2.1 || ^3.0",
         "symfony/filesystem": "^2.4 || ^3.0",
         "symfony/finder": "^2.2 || ^3.0",
         "symfony/polyfill-php54": "^1.0",
         "symfony/process": "^2.3 || ^3.0",
-        "symfony/stopwatch": "^2.5 || ^3.0",
-        "sebastian/diff": "^1.1"
+        "symfony/stopwatch": "^2.5 || ^3.0"
     },
     "require-dev": {
         "gecko-packages/gecko-php-unit": "^2.0",
@@ -33,16 +33,14 @@
     "conflict": {
         "hhvm": "<3.9"
     },
+    "config": {
+        "sort-packages": true
+    },
     "autoload": {
         "psr-4": { "PhpCsFixer\\": "src/" }
     },
     "autoload-dev": {
         "psr-4": { "PhpCsFixer\\Tests\\": "tests/" }
     },
-    "bin": ["php-cs-fixer"],
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.0-dev"
-        }
-    }
+    "bin": ["php-cs-fixer"]
 }
