--- a/php/zend/php-zendframework-zend-expressive/composer.json
+++ b/php/zend/php-zendframework-zend-expressive/composer.json
@@ -11,8 +11,8 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev",
-            "dev-develop": "1.1-dev"
+            "dev-master": "1.1-dev",
+            "dev-develop": "2.0-dev"
         }
     },
     "require": {
@@ -20,19 +20,20 @@
         "container-interop/container-interop": "^1.1",
         "psr/http-message": "^1.0",
         "zendframework/zend-diactoros": "^1.1",
-        "zendframework/zend-expressive-router": "^1.1",
+        "zendframework/zend-expressive-router": "^1.1 || ^2.0",
         "zendframework/zend-expressive-template": "^1.0.1",
-        "zendframework/zend-stratigility": ">=1.1.0 < 1.3.0 || >=1.3.1 <2.0.0"
+        "zendframework/zend-stratigility": "^1.3.3"
     },
     "require-dev": {
         "filp/whoops": "^1.1 || ^2.0",
         "phpunit/phpunit": "^4.7",
         "zendframework/zend-coding-standard": "~1.0.0",
-        "zendframework/zend-expressive-aurarouter": "^1.0",
-        "zendframework/zend-expressive-fastroute": "^1.0",
-        "zendframework/zend-expressive-zendrouter": "^1.0",
+        "zendframework/zend-expressive-aurarouter": "^1.0 || ^2.0",
+        "zendframework/zend-expressive-fastroute": "^1.0 || ^2.0",
+        "zendframework/zend-expressive-zendrouter": "^1.0 || ^2.0",
         "zendframework/zend-servicemanager": "^2.6",
-        "malukenho/docheader": "^0.1.5"
+        "malukenho/docheader": "^0.1.5",
+        "mockery/mockery": "^0.9.5"
     },
     "autoload": {
       "psr-4": {
