--- a/php/zend/php-zendframework-zend-expressive-fastroute/composer.json
+++ b/php/zend/php-zendframework-zend-expressive-fastroute/composer.json
@@ -13,16 +13,17 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "1.3-dev",
-            "dev-develop": "1.4-dev"
+            "dev-master": "2.0-dev",
+            "dev-develop": "2.1-dev"
         }
     },
     "require": {
         "php": "^5.6 || ^7.0",
         "nikic/fast-route": "^1.0.0",
         "psr/http-message": "^1.0",
-        "zendframework/zend-expressive-router": "^1.3.2",
-        "fig/http-message-util": "^1.1"
+        "zendframework/zend-expressive-router": "^2.0",
+        "fig/http-message-util": "^1.1",
+        "zendframework/zend-stdlib": "^3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.7 || ^5.6",
