--- a/php/sabredav/php-sabre-dav/composer.json
+++ b/php/sabredav/php-sabre-dav/composer.json
@@ -32,7 +32,7 @@
         "psr/log": "^1.0"
     },
     "require-dev" : {
-        "phpunit/phpunit" : "> 4.8, <=6.0.0",
+        "phpunit/phpunit" : "> 4.8, <6.0.0",
         "evert/phpdoc-md" : "~0.1.0",
         "sabre/cs"        : "^1.0.0",
         "monolog/monolog": "^1.18"
