--- a/php/php71/10-opcache.ini
+++ b/php/php71/10-opcache.ini
@@ -112,7 +112,13 @@ opcache.blacklist_filename=/etc/php.d/opcache*.blacklist
 ;opcache.file_cache_fallback=1
 
 ; Validate cached file permissions.
+; Leads OPcache to check file readability on each access to cached file.
+; This directive should be enabled in shared hosting environment, when few
+; users (PHP-FPM pools) reuse the common OPcache shared memory.
 ;opcache.validate_permission=0
 
 ; Prevent name collisions in chroot'ed environment.
+; This directive prevents file name collisions in different "chroot"
+; environments. It should be enabled for sites that may serve requests in
+; different "chroot" environments.
 ;opcache.validate_root=0
