php-zendframework-zend-captcha: 2.7.0

--- a/php/zend/php-zendframework-zend-captcha/composer.json
+++ b/php/zend/php-zendframework-zend-captcha/composer.json
@@ -21,8 +21,8 @@
         "zendframework/zend-session": "^2.6",
         "zendframework/zend-text": "^2.6",
         "zendframework/zend-validator": "^2.6",
-        "zendframework/zendservice-recaptcha": "*",
-        "squizlabs/php_codesniffer": "^2.3.1",
+        "zendframework/zendservice-recaptcha": "^3.0",
+        "zendframework/zend-coding-standard": "~1.0.0",
         "phpunit/PHPUnit": "~4.8"
     },
     "suggest": {
@@ -36,13 +36,24 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "2.6-dev",
-            "dev-develop": "2.7-dev"
+            "dev-master": "2.7-dev",
+            "dev-develop": "2.8-dev"
         }
     },
     "autoload-dev": {
         "psr-4": {
             "ZendTest\\Captcha\\": "test/"
         }
+    },
+    "scripts": {
+        "check": [
+            "@cs-check",
+            "@test"
+        ],
+        "cs-check": "phpcs",
+        "cs-fix": "phpcbf",
+        "test": "phpunit --colors=always",
+        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
+        "upload-coverage": "coveralls -v"
     }
 }
