--- a/php/bartlett/php-bartlett-umlwriter/composer.json
+++ b/php/bartlett/php-bartlett-umlwriter/composer.json
@@ -11,8 +11,8 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "symfony/console": "~2.5",
-        "sebastian/version": "~1.0"
+        "symfony/console": "~2.5|~3.0",
+        "sebastian/version": "~1.0|~2.0"
     },
     "require-dev": {
         "bartlett/php-reflect": "~4.0",
