--- a/php/phpunit/php-phpunit-php-code-coverage5/composer.json
+++ b/php/phpunit/php-phpunit-php-code-coverage5/composer.json
@@ -22,8 +22,10 @@
     },
     "require": {
         "php": "^7.0",
+        "ext-dom": "*",
+        "ext-xmlwriter": "*",
         "phpunit/php-file-iterator": "^1.3",
-        "phpunit/php-token-stream": "^1.4.2 || ^2.0",
+        "phpunit/php-token-stream": "^1.4.11 || ^2.0",
         "phpunit/php-text-template": "^1.2",
         "sebastian/code-unit-reverse-lookup": "^1.0",
         "sebastian/environment": "^2.0",
@@ -34,8 +36,7 @@
         "ext-xdebug": "^2.5"
     },
     "suggest": {
-        "ext-dom": "*",
-        "ext-xmlwriter": "*"
+        "ext-xdebug": "^2.5.1"
     },
     "autoload": {
         "classmap": [
