--- a/php/zend/php-zendframework-zend-expressive-zendviewrenderer/composer.json
+++ b/php/zend/php-zendframework-zend-expressive-zendviewrenderer/composer.json
@@ -9,28 +9,28 @@
         "middleware",
         "psr",
         "psr-7",
-        "zf2"
+        "zf"
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "1.2-dev",
-            "dev-develop": "1.3-dev"
+            "dev-master": "1.3-dev",
+            "dev-develop": "1.4-dev"
         }
     },
     "require": {
         "php": "^5.6 || ^7.0",
-        "container-interop/container-interop": "^1.1",
-        "psr/http-message": "^1.0",
-        "zendframework/zend-expressive-helpers": "^1.1 || ^2.2 || ^3.0",
-        "zendframework/zend-expressive-router": "^1.3.2 || ^2.0",
+        "container-interop/container-interop": "^1.2",
+        "psr/http-message": "^1.0.1",
+        "zendframework/zend-expressive-helpers": "^1.4 || ^2.2 || ^3.0.1",
+        "zendframework/zend-expressive-router": "^1.3.2 || ^2.1",
         "zendframework/zend-expressive-template": "^1.0.4",
-        "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3",
+        "zendframework/zend-servicemanager": "^2.7.8 || ^3.3",
         "zendframework/zend-view": "^2.8.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "zendframework/zend-coding-standard": "~1.0.0",
-        "malukenho/docheader": "^0.1.5"
+        "malukenho/docheader": "^0.1.5",
+        "phpunit/phpunit": "^6.0.8 || ^5.7.15",
+        "zendframework/zend-coding-standard": "~1.0.0"
     },
     "autoload": {
       "psr-4": {
@@ -45,12 +45,14 @@
     "scripts": {
         "check": [
             "@license-check",
-            "@cs",
+            "@cs-check",
             "@test"
         ],
-        "cs": "phpcs",
-        "cs-fix": "phpcbf",
+        "upload-coverage": "coveralls -v",
+        "cs-check": "phpcs --colors",
+        "cs-fix": "phpcbf --colors",
         "license-check": "docheader check src/ test/",
-        "test": "phpunit --colors=always"
+        "test": "phpunit --colors=always",
+        "test-coverage": "phpunit --coverage-clover clover.xml"
     }
 }
