open Fedora 26 repository with a fresh new GPG key

--- a/remi-release/Makefile
+++ b/remi-release/Makefile
@@ -11,6 +11,9 @@ el6:
 el7:
 	rpmbuild $(RPMDEFINES) $(SRCDEFINES) -bs $(NAME)-el.spec --define 'dist .el7.remi' --define 'rhel 7'
 
+f26:
+	rpmbuild $(RPMDEFINES) $(SRCDEFINES) -bs $(NAME).spec --define 'dist .f26.remi' --define 'fedora 26'
+
 f25:
 	rpmbuild $(RPMDEFINES) $(SRCDEFINES) -bs $(NAME).spec --define 'dist .f25.remi' --define 'fedora 25'
 
