--- a/php/zend/php-zendframework-zend-ldap/composer.json
+++ b/php/zend/php-zendframework-zend-ldap/composer.json
@@ -20,9 +20,10 @@
         "zendframework/zend-config": "^2.5",
         "zendframework/zend-eventmanager": "^2.6.3 || ^3.0.1",
         "zendframework/zend-stdlib": "^2.7 || ^3.0",
-        "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "^4.5",
-        "php-mock/php-mock-phpunit": "~0.3"
+        "php-mock/php-mock-phpunit": "~0.3",
+        "zendframework/zend-coding-standard": "~1.0.0",
+        "phpunit/phpunit": "^4.6"
     },
     "suggest": {
         "zendframework/zend-eventmanager": "Zend\\EventManager component"
@@ -31,8 +32,8 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "2.5-dev",
-            "dev-develop": "2.6-dev"
+            "dev-master": "2.8-dev",
+            "dev-develop": "2.9-dev"
         }
     },
     "autoload-dev": {
@@ -45,10 +46,10 @@
             "@cs-check",
             "@test"
         ],
-        "upload-coverage": "coveralls -v",
-        "cs-check": "php-cs-fixer --version && php-cs-fixer fix -v --diff --dry-run",
-        "cs-fix": "php-cs-fixer fix -v",
-        "test": "phpunit",
-        "test-coverage": "phpunit --coverage-clover clover.xml"
+        "cs-check": "phpcs",
+        "cs-fix": "phpcbf",
+        "test": "phpunit --colors=always",
+        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
+        "upload-coverage": "coveralls -v"
     }
 }
