php-akamai-open-edgegrid-auth: 1.0.0beta1 (backported from Fedora)

--- a/php/php-akamai-open-edgegrid-auth/composer.json
+++ b/php/php-akamai-open-edgegrid-auth/composer.json
@@ -46,6 +46,10 @@
         ],
         "test": "phpunit",
         "build-phar": "./tools/build-phar.sh",
-        "fix-cs": "./tools/fix-cs.sh"
+        "fix-cs": [
+            "phpcbf --standard=PSR1,PSR2 ./src ./tests",
+            "php-cs-fixer fix --level=psr2 ./src",
+            "php-cs-fixer fix --level=psr2 ./tests"
+        ]
     }
 }
