--- a/php/react/php-react-child-process/composer.json
+++ b/php/react/php-react-child-process/composer.json
@@ -7,9 +7,10 @@
         "php": ">=5.4.0",
         "evenement/evenement": "~2.0",
         "react/event-loop": "0.4.*",
-        "react/stream": "~0.4.2"
+        "react/stream": "^0.5 || ^0.4.4"
     },
     "require-dev": {
+        "phpunit/phpunit": "^5.0 || ^4.8.10",
         "sebastian/environment": "~1.0"
     },
     "autoload": {
