php-sebastian-object-enumerator3: 3.0.1

--- a/php/phpunit/php-sebastian-object-enumerator3/composer.json
+++ b/php/phpunit/php-sebastian-object-enumerator3/composer.json
@@ -23,7 +23,7 @@
     },
     "autoload-dev": {
         "classmap": [
-            "tests/"
+            "tests/_fixture/"
         ]
     },
     "extra": {
