--- a/tools/mock/el6i56.cfg
+++ b/tools/mock/el6i56.cfg
@@ -88,6 +88,11 @@ name=remi php56
 baseurl=file:/home/rpmbuild/site/rpms/enterprise/6/php56/i386/
 enabled=1
 
+[remi-debug56]
+name=remi debug php56
+baseurl=file:/home/rpmbuild/site/rpms/enterprise/6/debug-php56/i386/
+enabled=1
+
 [remi-test]
 name=remi test
 baseurl=file:/home/rpmbuild/site/rpms/enterprise/6/test/i386/
