--- a/php/zend/php-zendframework-zend-expressive-platesrenderer/composer.json
+++ b/php/zend/php-zendframework-zend-expressive-platesrenderer/composer.json
@@ -13,15 +13,15 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "1.2-dev",
-            "dev-develop": "1.3-dev"
+            "dev-master": "1.3-dev",
+            "dev-develop": "1.4-dev"
         }
     },
     "require": {
         "php": "^5.6 || ^7.0",
         "container-interop/container-interop": "^1.2",
         "league/plates": "^3.3",
-        "zendframework/zend-expressive-helpers": "^2.2 || ^3.0.1",
+        "zendframework/zend-expressive-helpers": "^2.2 || ^3.0.1 || ^4.0",
         "zendframework/zend-expressive-router": "^1.3.2 || ^2.1",
         "zendframework/zend-expressive-template": "^1.0.4"
     },
