--- a/php/zend/php-zendframework-zend-expressive-zendviewrenderer/composer.json
+++ b/php/zend/php-zendframework-zend-expressive-zendviewrenderer/composer.json
@@ -13,15 +13,15 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "1.3-dev",
-            "dev-develop": "1.4-dev"
+            "dev-master": "1.4-dev",
+            "dev-develop": "1.5-dev"
         }
     },
     "require": {
         "php": "^5.6 || ^7.0",
         "container-interop/container-interop": "^1.2",
         "psr/http-message": "^1.0.1",
-        "zendframework/zend-expressive-helpers": "^1.4 || ^2.2 || ^3.0.1",
+        "zendframework/zend-expressive-helpers": "^1.4 || ^2.2 || ^3.0.1 || ^4.0",
         "zendframework/zend-expressive-router": "^1.3.2 || ^2.1",
         "zendframework/zend-expressive-template": "^1.0.4",
         "zendframework/zend-servicemanager": "^2.7.8 || ^3.3",
