--- a/php/react/php-react-dns/composer.json
+++ b/php/react/php-react-dns/composer.json
@@ -1,13 +1,18 @@
 {
     "name": "react/dns",
-    "description": "Async DNS resolver.",
+    "description": "Async DNS resolver for ReactPHP",
     "keywords": ["dns", "dns-resolver"],
     "license": "MIT",
     "require": {
         "php": ">=5.3.0",
         "react/cache": "~0.4.0|~0.3.0",
-        "react/socket": "~0.4.0|~0.3.0",
-        "react/promise": "~2.1|~1.2"
+        "react/socket": "^0.5 || ^0.4.4",
+        "react/stream": "^0.6 || ^0.5 || ^0.4.5",
+        "react/promise": "~2.1|~1.2",
+        "react/promise-timer": "~1.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.0 || ^4.8.10"
     },
     "autoload": {
         "psr-4": { "React\\Dns\\": "src" }
