--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ php/php-twig
 php/php-twig2
 glpi
 php/php-league-flysystem
+php/php-justinrainbow-json-schema5
+php/zend/php-zendframework-zend-navigation
+php/pecl/php-pecl-apcu
