--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ php/php-league-flysystem
 php/php-justinrainbow-json-schema5
 php/zend/php-zendframework-zend-navigation
 php/pecl/php-pecl-apcu
+php/php-phalcon
+php/php-phalcon2
+php/php-phalcon3
+tools
+php/phpunit
