--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,15 @@ glpi
 php/php-league-flysystem
 php/php-justinrainbow-json-schema5
 php/zend/php-zendframework-zend-navigation
-php/pecl/php-pecl-apcu
 php/php-phalcon
 php/php-phalcon2
 php/php-phalcon3
 tools
 php/phpunit
+remi-release
+scl-php54
+scl-php55
+scl-php56
+scl-php70
+scl-php71
+php/pecl
