--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,19 @@ scl-php70
 scl-php71
 php/pecl
 php/zend
+ImageMagick6
+ImageMagick7
+redis
+memcached
+php/aws
+php/php52
+php/php53
+php/php54
+php/php54-extras
+php/php55
+php/php55-extras
+php/php56
+php/php56-extras
+php/php70
+php/php71
+php/sabredav
