--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,11 @@ php/php56-extras
 php/php70
 php/php71
 php/sabredav
+oracle
+php/zeta
+php/wikimedia
+php/theseer
+php/tecnick
+php/react
+php/symfony2
+libreoffice-grammalecte
