--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,10 @@ php/tecnick
 php/react
 php/symfony2
 libreoffice-grammalecte
+php/phpspec
+php/phpseclib
+php/bartlett
+php/channel
+php/doctrine
+php/nette
+php/hoa
