--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,38 @@ php/channel
 php/doctrine
 php/nette
 php/hoa
+php/horde
+php/pear
+perl/
+common
+zorba
+zephir-parser
+zarafa
+xul
+vlc
+lib
+unbound
+tora
+js
+syck
+supybot
+apache
+scl-utils
+rrdtool
+roundcubemail
+repoview
+qelectrotech
+ranger
+prototype
+pdflib-lite
+phinx
+phar-gui
+phan
+owncloud
+ocsinventory
+mysql
+msodbcsql
+mock
+live555
+libzip
+libxmp
