--- a/.gitignore
+++ b/.gitignore
@@ -109,4 +109,27 @@ ocsinventory
 mysql
 msodbcsql
 mock
-libui
+json-c
+icu-last
+httpd
+gosa
+graphviz
+gnupg1
+gmusicbrowser
+gettext
+gd
+fusioninventory-agent
+firefox
+environment-modules
+eclipse-phpeclipse
+bluegriffon
+dojo
+cups
+createrepo
+cnijfilter
+atoum
+bison24
+apm-web
+aspell-mt
+ice
+composer
